# scholarship-applications

./: .gitignore
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  logging_config.py
backend/app/models/: models.py
backend/app/routes/: admin.py  login_register.py  scholarship.py  users.py
backend/app/schemas/: auth_schema.py  sadm_schema.py  sch_schema.py
frontend/: package-lock.json
frontend/src/: index.css  main.jsx
frontend/src/app/: App.jsx  Routes.jsx
frontend/src/components/: AdminRoute.jsx  Footer.jsx  Navbar.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/features/: LandingPage.jsx
frontend/src/features/admin/: SuperAdmin.jsx
frontend/src/features/admin/components/: AdminUse.jsx  DeleteUser.jsx  EditUser.jsx  UserCard.jsx  UserDelete.jsx  UserFilter.jsx  UserList.jsx  UserTab.jsx  UserUpdate.jsx
frontend/src/features/auth/: Login.jsx  Register.jsx
frontend/src/features/auth/authorization/: AdminRoute.jsx  ProtectedRoute.jsx  SuperAdminRoute.jsx
frontend/src/features/auth/components/: Feedback.jsx
frontend/src/features/landing/: LandingPage.jsx
frontend/src/features/landing/components/: LandingNavBar.jsx  MainNavBar.jsx
frontend/src/features/scholarships/: Dashboard.jsx
frontend/src/features/scholarships/components/: DeskBoard.jsx  MobileBoard.jsx  ScholarshipCard.jsx  ScholarshipInfo.jsx  ScholarshipModal.jsx  ScholarshipTab.jsx  SelectBoard.jsx
frontend/src/features/scholarships/pages/: Dashboard.jsx
frontend/src/services/: api.js
(+13 files in other folders)
